Add implementations of InputValidator for NewKotlinFileAction (#3)